--- a/pom.xml
+++ b/pom.xml
@@ -289,6 +289,11 @@
             <artifactId>mysql</artifactId>
             <scope>test</scope>
         </dependency>
+             <dependency>
+	<groupId>org.springdoc</groupId>
+	<artifactId>springdoc-openapi-common</artifactId>
+	<version>1.7.0</version>
+</dependency>
     </dependencies>
 
     <build>
