--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,6 +1,6 @@
 #H2 Server Properties
-#Fri Mar 15 23:15:49 WET 2024
+#Tue Mar 19 11:31:21 CET 2024
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/prospace|prospace
+webSSL=false
 webAllowOthers=true
 webPort=8092
-webSSL=false
