--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -154,7 +154,17 @@ spring:
   output:
     ansi:
       console-available: true
-
+  security:
+    oauth2:
+      client:
+        provider:
+          oidc:
+            issuer-uri: http://localhost:8080/realms/jhipster
+        registration:
+          oidc:
+            client-id: web_app
+            client-secret: web_app
+            scope: openid, profile, email, offline_access # last one for refresh tokens
 server:
   servlet:
     session:
