--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,10 @@
             <version>9.2.0</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.vaadin.external.google</groupId>
             <artifactId>android-json</artifactId>
             <version>0.0.20131108.vaadin1</version>
@@ -1021,7 +1025,7 @@
                 <dependency>
                     <groupId>org.projectlombok</groupId>
                     <artifactId>lombok</artifactId>
-                    <version>1.18.22</version>
+                    <version>1.18.24</version>
                     <scope>compile</scope>
                 </dependency>
             </dependencies>
