--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,6 +1,6 @@
 #H2 Server Properties
-#Wed Mar 20 14:56:43 CET 2024
+#Mon Apr 08 10:55:13 WET 2024
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/prospace|prospace
-webSSL=false
 webAllowOthers=true
 webPort=8092
+webSSL=false
