--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,5 @@
 #H2 Server Properties
-#Wed Mar 20 14:56:43 CET 2024
+#Thu Apr 04 14:24:30 WET 2024
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/prospace|prospace
 webSSL=false
 webAllowOthers=true
