new version 14/04/2024 3:58 updated

--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,5 @@
 #H2 Server Properties
-#Sat Apr 13 23:58:14 WET 2024
+#Sun Apr 14 03:54:30 WEST 2024
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/prospace|prospace
 webAllowOthers=true
 webPort=8092
