--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -65,13 +65,16 @@ jhipster:
       time-to-live-seconds: 3600 # By default objects stay 1 hour in the cache
       max-entries: 100 # Number of objects in each cache entry
   # CORS is only enabled by default with the "dev" profile
+
+
   cors:
-    allowed-origins: "*"
-    allowed-methods: "GET,POST,PUT,DELETE,OPTIONS"
-    allowed-headers: "*"
-    exposed-headers: "Authorization, Link, X-Total-Count, X-${jhipster.clientApp.name}-alert, X-${jhipster.clientApp.name}-error, X-${jhipster.clientApp.name}-params"
-    allow-credentials: true
-    max-age: 1800
+   allowed-origins: 'http://localhost:8090'
+   allowed-methods: 'GET, POST, PUT, DELETE'
+   allowed-headers: '*'
+   exposed-headers: 'Authorization, Link, X-Total-Count, X-${jhipster.clientApp.name}-alert, X-${jhipster.clientApp.name}-error, X-${jhipster.clientApp.name}-params'
+   allow-credentials: true
+   max-age: 3600
+
   logging:
     use-json-format: false # By default, logs are not in Json format
     logstash: # Forward logs to logstash over a socket, used by LoggingConfiguration
