--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -68,12 +68,12 @@ jhipster:
 
 
   cors:
-   allowed-origins: 'http://localhost:8090'
-   allowed-methods: 'GET, POST, PUT, DELETE'
-   allowed-headers: '*'
-   exposed-headers: 'Authorization, Link, X-Total-Count, X-${jhipster.clientApp.name}-alert, X-${jhipster.clientApp.name}-error, X-${jhipster.clientApp.name}-params'
-   allow-credentials: true
-   max-age: 3600
+    allowed-origin-patterns: '*'
+    allowed-methods: 'GET,DELETE,POST,PUT'
+    allowed-headers: '*'
+    exposed-headers: 'Authorization, Link, X-Total-Count, X-${jhipster.clientApp.name}-alert, X-${jhipster.clientApp.name}-error, X-${jhipster.clientApp.name}-params'
+    allow-credentials: true
+    max-age: 3600
 
   logging:
     use-json-format: false # By default, logs are not in Json format
