--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -207,13 +207,13 @@ jhipster:
 
   # By default CORS is disabled. Uncomment to enable.
 
-cors:
-  allowed-origins: 'http://localhost:8090'
-  allowed-methods: 'GET, POST, PUT, DELETE'
-  allowed-headers: '*'
-  exposed-headers: 'Authorization, Link, X-Total-Count, X-${jhipster.clientApp.name}-alert, X-${jhipster.clientApp.name}-error, X-${jhipster.clientApp.name}-params'
-  allow-credentials: true
-  max-age: 3600
+  cors:
+    allowed-origin-patterns: '*'
+    allowed-methods: 'GET,DELETE,POST,PUT'
+    allowed-headers: '*'
+    exposed-headers: 'Authorization, Link, X-Total-Count, X-${jhipster.clientApp.name}-alert, X-${jhipster.clientApp.name}-error, X-${jhipster.clientApp.name}-params'
+    allow-credentials: true
+    max-age: 3600
 
   mail:
     from: prospace@localhost
